--- a/sources.html
+++ b/sources.html
@@ -7,11 +7,7 @@ layout: default
 
 <div class="row">
   <div class="span8 offset4">
-  <p>このサイトは以下の３種類のデータを用いています。第１は、横浜市の一般会計当初予算の使いみち１０分類のデータ・ラベル。第２は、この１０分類を更に細分類した２０分類のデータ・ラベル。第３は、横浜市の２４年度一般会計予算の２０分類別の予算比率データです。</p>
-
-  <p>第１および第２のデータ・ラベルは、横浜市財政局財政課による「平成２４年度予算案について　資料編」９８頁の「市民一人あたり予算の使いみち（一般会計）」表中の分野名および局・統括本部名を用いています。</p>
-
-  <p>第３の予算比率データは、前出「平成２４年度予算案について」３６〜７２頁の「４　２４年度の主要事業一覧（１） ２４年度局の主要事業一覧」表中の局・統括本部の主要事業予算総額の比率を用いています。</p>
+  <p>このサイトは熊本県熊本市の平成25年度一般会計当初予算(目的別)のpdfファイルのデータを元にOpenSpendingにアップロードしたデータを利用しています。</p>
   </div>
 </div>
 
@@ -20,14 +16,14 @@ layout: default
 
 <div class="row">
   <div class="span8 offset4">
-  横浜市財政局財政課が「平成２４年度予算案について　資料編」において用いている一般会計予算の使いみち10分類および局・統括本部２０分類を使っています。
+  熊本県熊本市財政課が「平成25年度一般会計当初予算」において用いている一般会計予算の使いみち13分類を使っています。
   </div>
 </div>
 <h2 class="page-header">いつの時点のデータを使っているのか？ </h2>
 
 <div class="row">
   <div class="span8 offset4">
-  平成２４年度横浜市予算のデータを使っています。
+  平成２５年度熊本市一般会計当初予算のデータを使っています。
   </div>
 </div>
 
@@ -53,7 +49,7 @@ If you know of data published in this way for your country, please email us at <
 
 <div class="row">
   <div class="span8 offset4">
-  今回の<strong>Where Does My Money Go?</strong> β版は横浜市の平成24年度一般会計予算のうち、主要事業のみを対象としていますが、今後3000事業すべてを反映させる予定です。今後、各自治体や日本政府の一般会計、特別会計、公営企業会計へと対象を広げることも考えています。
+  今回の<strong>Where Does My Money Go?</strong> β版は熊本市の平成25年度一般会計予算のみを対象としています。今後、各自治体や日本政府の一般会計、特別会計、公営企業会計へと対象を広げることも考えています。
 
   </div>
 </div>
